fixed overlapping 1st box in a row

--- a/css/style.scss
+++ b/css/style.scss
@@ -417,7 +417,6 @@
 		box-shadow: 0 2px 0 0 $color-border;
 		margin: 0 0 $size-element-margin 0;
 		padding: $box-padding;
-		display: table;
 		width: 100%;
 		
 		> :last-child {
